<resources>
    <string name="app_name">VetAlmael</string>

    <!-- General -->
    <string name="general_error">Něco se nepovedlo. Zkuste to znovu.</string>
    <string name="try_again">Zkusit znovu</string>

    <!-- Login -->
    <string name="username">Přihlašovací jméno</string>
    <string name="password">Heslo</string>
    <string name="password_again">Heslo znovu</string>
    <string name="login">Přihlásit se</string>
    <!-- Required to show error without showing error message. -->
    <string name="space" translatable="false">\u00A0</string>
    <string name="reservations">Rezervace</string>
    <string name="animals">Zvířata</string>
    <string name="user">Uživatel</string>
    <string name="logout">Odhlásit se</string>
    <string name="add_animal">Přidat zvíře</string>
    <string name="add_reservation">Vytvořit rezervaci</string>
    <string name="reservation_title">Rezervace %s</string>
    <string name="full_name">Pravé jméno</string>
    <string name="email">E-mail</string>
    <string name="register_now">Nemáte účet? Registrujte se!</string>
    <string name="register">Registrovat</string>
    <string name="email_error">Zadejte validní e-mail.</string>
    <string name="phone_error">Zadejte validní telefonní číslo.</string>
    <string name="different_passwords_error">Zadaná hesla nejsou stejná.</string>
    <string name="password_too_short_error">Heslo musí obsahovat alespoň 8 znaků.</string>

    <string name="empty_animal_list">Nemáte žádné zvíře.\nPřidejte ho pomocí tlačítka plus vpravo dole.</string>
    <string name="empty_animal_card">Nemáte žádné návštěvy veterináře.\nRezervujte si termín pomocí této aplikace..</string>
    <string name="empty_reservation_list">Nemáte žádné rezervace.\nRezervujte si termín pomocí tlačítka plus vpravo dole.</string>
    <string name="name">Jméno</string>
    <string name="clinic">Klinika</string>
    <string name="time_of_visit">Čas návštěvy</string>
    <string name="select_date">Vybrat datum</string>
    <string name="select_time">Vybrat čas</string>
    <string name="card">Karta</string>
    <string name="animal_card">Karta zvířete</string>
    <string name="messages">Zprávy</string>
    <string name="delete">Smazat</string>
    <string name="empty_message_list">Nemáte žádné zprávy o tomto zvířeti.\nPokud máte nějaké dotazy napište zprávu.</string>
    <string name="download_pdf">Stáhnout PDF</string>

    <string name="report_id_text">Návštěva číslo #%s\nDne %s</string>
    <string name="report_state_waiting">Stav: Čeká na veterináře</string>
    <string name="report_state">Stav: Zpracováno veterinářem (%s)</string>
    <string name="report_animal">Zvíře: %s</string>
    <string name="report_text_description">Textový popis: %s</string>
    <string name="report_text_diagnosis">Textová diagnóza: %s</string>
    <string name="report_text_recommendation">Doporučení: %s</string>
    <string name="report_diagnosis">Diagnóza: %s</string>
    <string name="report_operation">Operace: %s</string>
</resources>