<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_reservation" />

    <cz.upce.vetalmael.core.view.ContentLoadingLayout
        android:id="@+id/contentLoadinglayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/clinicInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:hint="@string/clinic"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/clinicAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="false"
                    android:hint="@string/time_of_visit"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clinicInputLayout"
                    app:startIconDrawable="@drawable/ic_reservation">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:backgroundTint="?attr/colorSecondary"
                    android:text="@string/select_date"
                    app:layout_constraintEnd_toStartOf="@id/selectTimeButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@id/dateTextLayout"
                    app:layout_constraintTop_toBottomOf="@id/dateTextLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:backgroundTint="?attr/colorSecondary"
                    android:text="@string/select_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/selectDateButton"
                    app:layout_constraintTop_toBottomOf="@id/dateTextLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:layout_marginBottom="36dp"
                    android:enabled="false"
                    android:text="@string/add_reservation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectDateButton"
                    app:layout_constraintVertical_bias="0" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/saveButton"
                    app:layout_constraintEnd_toEndOf="@id/saveButton"
                    app:layout_constraintStart_toStartOf="@id/saveButton"
                    app:layout_constraintTop_toTopOf="@id/saveButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </cz.upce.vetalmael.core.view.ContentLoadingLayout>

</androidx.constraintlayout.widget.ConstraintLayout>